# lucene_vector

./: README.md  build.gradle  com_github_eliak_VScoreNative.h  settings.gradle
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: aligned.rs  lib.rs  tests.rs  unaligned.rs
src/jmh/java/com/github/eliak/: BenchSearchState.java  BenchSimilarityState.java  BenchUtils.java  BenchmarkRunner.java
src/main/java/com/github/eliak/: ScorerType.java  VQuery.java  VScoreNative.java  VScorer.java  VScorerDefault.java  VScorerFactory.java  VScorerNative.java  VScorerNativeCritical.java  VScorerNativeFactory.java  VScorerSimpleCache.java  VWeight.java
src/test/java/com/github/eliak/: ScoreUtils.java  VScoreNativeTest.java  VScorerTest.java
