[package]
name = "rust"
version = "0.1.0"
authors = ["Alexey Serov <am.serov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni="0.17.0"
rand = "0.7.3"
packed_simd = "0.3.3"
lazy_static = "1.4.0"
hashers = "1.0.1"

[lib]
crate_type = ["cdylib"]